# Whisper-Malayalam-Finetuning

./: LoRaFinetuning.ipynb  LoRaFinetuning_1.ipynb  QLoRaFinetuning.ipynb  UnlsothWhisper.ipynb  fullfinetuning.ipynb  notebook.ipynb  pyproject.toml
runs/128_128_1e-05/: events.out.tfevents.1750395500.LAPTOP-O5THQGTR.18544.0  events.out.tfevents.1750395924.LAPTOP-O5THQGTR.15464.0
runs/128_256_5e-05/: events.out.tfevents.1750407623.LAPTOP-O5THQGTR.24452.0
runs/128_256_all_layer/: events.out.tfevents.1750428353.LAPTOP-O5THQGTR.23192.0
runs/16_32_1e-05/: events.out.tfevents.1750328756.LAPTOP-O5THQGTR.4756.0
runs/256_512_5e-05/: events.out.tfevents.1750418471.LAPTOP-O5THQGTR.15944.0  events.out.tfevents.1750422304.LAPTOP-O5THQGTR.14084.0
runs/32_64_5e-05/: events.out.tfevents.1750334260.LAPTOP-O5THQGTR.3248.0  events.out.tfevents.1750338805.LAPTOP-O5THQGTR.18232.0
runs/64_128_5e-05/: events.out.tfevents.1750343559.LAPTOP-O5THQGTR.12796.0
runs/64_64_5e-05/: events.out.tfevents.1750339086.LAPTOP-O5THQGTR.9092.0  events.out.tfevents.1750341145.LAPTOP-O5THQGTR.25376.0
runs/8_16_1e-05/: events.out.tfevents.1750318946.LAPTOP-O5THQGTR.15156.0  events.out.tfevents.1750320680.LAPTOP-O5THQGTR.15156.1  events.out.tfevents.1750321309.LAPTOP-O5THQGTR.5052.0
