[project]
name = "whisper-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "ipywidgets>=8.1.7",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "transformers>=4.52.4",
]
